--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,6 @@
   ],
   "dependencies": {
     "angular": "^1.5.8",
-    "bootstrap": "^3.3.7",
-    "angular-bootstrap": "^2.2.0"
+    "bootstrap": "^3.3.7"
   }
 }
