--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "start": "concurrently \"gulp\" \"npm run lite\""
   },
   "devDependencies": {
+    "babel-core": "^6.18.2",
+    "babel-preset-es2015": "^6.18.0",
     "browserify": "^12.0.2",
     "concurrently": "^3.1.0",
     "gulp": "^3.9.1",
     "gulp-load-plugins": "^1.3.0",
-    "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.2",
     "gulp-tslint": "^4.3.5",
     "gulp-typescript": "^2.14.1",
