--- a/package.json
+++ b/package.json
@@ -9,17 +9,18 @@
     "start": "concurrently \"gulp\" \"npm run lite\""
   },
   "devDependencies": {
-    "babel-core": "^6.18.2",
-    "babel-preset-es2015": "^6.18.0",
+    "babel-core": "^6.22.1",
+    "babel-preset-es2015": "^6.22.0",
     "browserify": "^12.0.2",
     "concurrently": "^3.1.0",
     "gulp": "^3.9.1",
     "gulp-sass": "^2.3.2",
-    "gulp-tslint": "^4.3.5",
-    "gulp-typescript": "^2.14.1",
+    "gulp-tslint": "^7.0.1",
+    "gulp-typescript": "^3.1.4",
     "lite-server": "^2.2.2",
     "tslint": "^3.15.1",
-    "typings": "^2.0.0",
+    "typescript": "^2.1.5",
+    "typings": "^2.1.0",
     "vinyl-source-stream": "^1.1.0"
   }
 }
